--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ DarkCrew Elite Group Sunar...
 <a href="https://darkcrew.org" title="hack forum" rel="dofollow">hack forum</a>
 <a href="https://www.scorpioldefacer.com/" title="hacker blog" rel="dofollow">hacker blog</a>
 </div>
-<font face="Monospace" size="5" style="color: aqua; text-shadow: 0px 1px 12px aqua;background:url('https://3.bp.blogspot.com/-_0rCL_Zt0iY/XHrXL9X3jxI/AAAAAAAAAaE/pV18zGCJhjQ-haMXbpjdhmUpt8Tb5BIDgCLcBGAs/s1600/B91GgQ.gif');"><b>Thanks  :  Scorpiol | Hacktime | Codex | M4D | RootAyyıldız | F4HRER | MAVISİMSEK | Xale | clayziyy | Paypın | Atmaca/adalfwolf |
+<font face="Monospace" size="5" style="color: aqua; text-shadow: 0px 1px 12px aqua;background:url('https://3.bp.blogspot.com/-_0rCL_Zt0iY/XHrXL9X3jxI/AAAAAAAAAaE/pV18zGCJhjQ-haMXbpjdhmUpt8Tb5BIDgCLcBGAs/s1600/B91GgQ.gif');"><b>Thanks  :  Scorpiol | Hacktime | Codex | M4D | RootAyyıldız | F4HRER | MAVISİMSEK | L4ncelot | Paypın | Atmaca/adalfwolf |
 </font></br><br>
 <img src="https://lh3.googleusercontent.com/-7JKT792Hh_0/XHrXVoKcjyI/AAAAAAAAAaI/mtdGn5VZFeMRM3Xf_NQzvto-WVWMQfgXgCLcBGAs/h51/line-decoration.png" width="550">
 <p><font face="Share Tech Mono" size="3" style="color: white; text-shadow: 0px 1px 6px white;"></font>
