--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ scrollMSG();
 <body style="background-color: #000000;">
 <div align="center">
 <center><img src="">
-</br><img src="https://3.bp.blogspot.com/-1ZXlCM3HB4w/XHiXMePuscI/AAAAAAAAAZs/vofXnjpObuskp-sok475Ktp2n-FqpnC0ACLcBGAs/s400/ogJmDm.gif" width="350"><br><br>
+</br><img src="https://i.ibb.co/yssjRMF/darkcrew.gif" width="350"><br><br>
 <br>
-<font face="Denk One" size="5" style="color: white; text-shadow: 0px 1px 6px red;"> ~ UYARI by SCORPIOL &#8734; Hacktime ~ </font>
+<font face="Denk One" size="5" style="color: white; text-shadow: 0px 1px 6px red;"> ~ UYARI by SCORPIOL &#8734; F4HRER ~ </font>
 <br>
 
 <font color="black" face="Share Tech Mono" size="4"><font style="color: orange; text-shadow: 0px 1px 6px orange;" face="Geo" size="4"><br>
