--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-<link rel="shortcut icon" href="http://icons.iconarchive.com/icons/iconarchive/red-orb-alphabet/256/Letter-E-icon.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://i.ibb.co/yssjRMF/darkcrew.gif" type="image/x-icon">
 <script type='text/javascript'>
 //<![CDATA[
 msg = " | SCORPIOL BURADAYDI |";
