--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-<link rel="shortcut icon" href="https://i.ibb.co/yssjRMF/darkcrew.gif" type="image/x-icon">
+<link rel="shortcut icon" href="https://i.ibb.co/VLVtmbj/eternalteam.gif" type="image/x-icon">
 <script type='text/javascript'>
 //<![CDATA[
 msg = " | SCORPIOL BURADAYDI |";
@@ -24,7 +24,7 @@ scrollMSG();
 <body style="background-color: #000000;">
 <div align="center">
 <center><img src="">
-</br><img src="https://i.ibb.co/yssjRMF/darkcrew.gif" width="350"><br><br>
+</br><img src="https://i.ibb.co/8mM0cGK/eternalteam.gif" width="350"><br><br>
 <br>
 <font face="Denk One" size="5" style="color: white; text-shadow: 0px 1px 6px red;"> ~ UYARI by SCORPIOL &#8734; F4HRER ~ </font>
 <br>
