--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ scrollMSG();
 <body style="background-color: #000000;">
 <div align="center">
 <center><img src="">
-</br><img src="https://i.ibb.co/8mM0cGK/eternalteam.gif" width="350"><br><br>
+</br><img src="https://i.ibb.co/8mM0cGK/eternalteam.gif" width="400"><br><br>
 <br>
 <font face="Denk One" size="5" style="color: white; text-shadow: 0px 1px 6px red;"> ~ UYARI by SCORPIOL &#8734; F4HRER ~ </font>
 <br>
@@ -55,7 +55,7 @@ ETERNALTEAM Elite Group Sunar...
 <a href="https://www.eternalteam.org/forum/" title="hack forum" rel="dofollow">hack forum</a>
 <a href="https://www.scorpioldefacer.com/" title="hacker blog" rel="dofollow">hacker blog</a>
 </div>
-<font face="Monospace" size="5" style="color: aqua; text-shadow: 0px 1px 12px aqua;background:url('https://3.bp.blogspot.com/-_0rCL_Zt0iY/XHrXL9X3jxI/AAAAAAAAAaE/pV18zGCJhjQ-haMXbpjdhmUpt8Tb5BIDgCLcBGAs/s1600/B91GgQ.gif');"><b>Thanks  :  Scorpiol | Hacktime | Codex | M4D | RootAyyıldız | F4HRER | MAVISİMSEK | L4ncelot | Paypın | Atmaca/adalfwolf |
+<font face="Monospace" size="5" style="color: aqua; text-shadow: 0px 1px 12px aqua;background:url('https://3.bp.blogspot.com/-_0rCL_Zt0iY/XHrXL9X3jxI/AAAAAAAAAaE/pV18zGCJhjQ-haMXbpjdhmUpt8Tb5BIDgCLcBGAs/s1600/B91GgQ.gif');"><b>Thanks  :  Scorpiol | F4HRER | Hacktime | Codex | M4D | MAVISİMSEK | L4ncelot | Atmaca/adalfwolf |
 </font></br><br>
 <img src="https://lh3.googleusercontent.com/-7JKT792Hh_0/XHrXVoKcjyI/AAAAAAAAAaI/mtdGn5VZFeMRM3Xf_NQzvto-WVWMQfgXgCLcBGAs/h51/line-decoration.png" width="550">
 <p><font face="Share Tech Mono" size="3" style="color: white; text-shadow: 0px 1px 6px white;"></font>
