--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ ETERNALTEAM Elite Group Sunar...
 </font></br><br>
 <img src="https://lh3.googleusercontent.com/-7JKT792Hh_0/XHrXVoKcjyI/AAAAAAAAAaI/mtdGn5VZFeMRM3Xf_NQzvto-WVWMQfgXgCLcBGAs/h51/line-decoration.png" width="550">
 <p><font face="Share Tech Mono" size="3" style="color: white; text-shadow: 0px 1px 6px white;"></font>
-</a><a style="text-decoration:none;" target="_blank" href="https://www.eternalteam.org/forum/"> <font color="White" size="6" face="Iceland"><font face="Denk One" size="5" style="color: white; text-shadow: 0px 1px 6px red;background:url('https://3.bp.blogspot.com/-_0rCL_Zt0iY/XHrXL9X3jxI/AAAAAAAAAaE/pV18zGCJhjQ-haMXbpjdhmUpt8Tb5BIDgCLcBGAs/s1600/B91GgQ.gif');"> &#8734; DARKCREW.ORG &#8734;  </font>
+</a><a style="text-decoration:none;" target="_blank" href="https://www.eternalteam.org/forum/"> <font color="White" size="6" face="Iceland"><font face="Denk One" size="5" style="color: white; text-shadow: 0px 1px 6px red;background:url('https://3.bp.blogspot.com/-_0rCL_Zt0iY/XHrXL9X3jxI/AAAAAAAAAaE/pV18zGCJhjQ-haMXbpjdhmUpt8Tb5BIDgCLcBGAs/s1600/B91GgQ.gif');"> &#8734; ETERNALTEAM.ORG &#8734;  </font>
 <center><img src="https://archive.is/9Onyj/0a5dd37006c5507630a811fd0ba1c8e7bae66554.gif" style="height:50px;"></center>
 <iframe allow="autoplay; encrypted-media" allowfullscreen="" frameborder="0" height="0" src="https://www.youtube.com/embed/iYi6J9Z6Y30?autoplay=1&controls=0&showinfo=0" width="0">
 </font></font></div> 
