--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="https://i.ibb.co/VLVtmbj/eternalteam.gif" type="image/x-icon">
 <script type='text/javascript'>
 //<![CDATA[
-msg = " | SCORPIOL BURADAYDI |";
+msg = " | SCORPIOL ∞ F4HRER BURADAYDI |";
 msg = "" + msg;pos = 0;
 function scrollMSG()
 {document.title = msg.substring(pos, msg.length) + msg.substring(0, pos); pos++;
