--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Warning by Scorpiol | F4hrer</title>
+<title>Warning by Scorpiol</title>
 <meta name="description" content="Scorpiol">
 <meta property="og:image" content="https://i.ibb.co/q92GvX3/1647707777959.jpg">
 <link rel="icon" href="http://icons.iconarchive.com/icons/iconarchive/red-orb-alphabet/256/Letter-E-icon.png">
@@ -1018,7 +1018,7 @@ body {
 <div style="line-height:10%;">
 <br>
 </div>
-<center><div id="center"> <font size="5"><font face="'Rajdhani', sans-serif" color="#0000FF">Scor</font><font face="'Rajdhani', sans-serif" color="#0000FF">piol</font><font face="'Rajdhani', sans-serif" color="#FFFFFF">∞</font><font face="'Rajdhani', sans-serif" color="#FF0000">F4h</font><font face="'Rajdhani', sans-serif" color="#FF0000">rer</font></font></div>
+<center><div id="center"> <font size="5"><font face="'Rajdhani', sans-serif" color="#0000FF">Scor</font><font face="'Rajdhani', sans-serif" color="#0000FF">piol</font><font face="'Rajdhani', sans-serif" color="#FFFFFF">∞</font><font face="'Rajdhani', sans-serif" color="#FF0000"></font><font face="'Rajdhani', sans-serif" color="#FF0000"></font></font></div>
 
 <font face="Monospace" size="5" style="color: #FFFFFF	; text-shadow: 0px 1px 12px aqua;background:url('https://3.bp.blogspot.com/-_0rCL_Zt0iY/XHrXL9X3jxI/AAAAAAAAAaE/pV18zGCJhjQ-haMXbpjdhmUpt8Tb5BIDgCLcBGAs/s1600/B91GgQ.gif');"><b>Brothers  :  H4cktime ∞ Atmaca
 </font></br><br>
@@ -1308,7 +1308,7 @@ textt();
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <a href='https://www.scorpioldefacer.com/' rel='dofollow' title='hack forum'>hack forum</a>
-<a href='https://www.defacerf4hrer.com/' rel='dofollow' title='hacker blog'>hacker blog</a>
+<a href='' rel='dofollow' title='hacker blog'>hacker blog</a>
 </div>
 <!-- Backlink -->
 	
